M      cg_vbm8_longitudinal.m
M      VBM8-Manual.doc

(1) Updated halfway registration in cg_realign.m to deal with mixed
    orientations.
(2) Added option to weight registration with inverse standard deviation to
    cg_realign.m.
(3) Updated Manual.
------------------------------------------------------------------------
r386 | gaser | 2011-01-05 17:24:52

M       cg_cfg_realign.m
M       cg_vbm8_longitudinal.m

(1) Corrected some dependency errors in cg_vbm8_longitudinal.m
(2) Changed some names in cg_cfg_realign.m to indicate difference to spm
    realignment.
------------------------------------------------------------------------
r387 | gaser | 2011-01-05 22:33:29

M       cg_vbm8_batch.m
M       cg_spm8_batch.m

Corrected call of spm_get_defaults in cg_*_batch.m to prevent output of
defaults.
------------------------------------------------------------------------
r388 | gaser | 2011-01-05 22:40:56

M       VBM8-Manual.pdf
M       VBM8-Manual.doc

Updated VBM8-Manual.
------------------------------------------------------------------------
r389 | gaser | 2011-01-24 20:32:47

A       VBM8-Manual_Japanese.doc
A       VBM8-Manual_Japanese.pdf

Added japanese version of manual.
------------------------------------------------------------------------
r390 | gaser | 2011-01-24 20:38:53

M      sanlmMex.mexw32
M      AmapMex.mexa64
M      AmapMex.mexw32
M      cg_realign.m
M      sanlmMex.mexw64
M      VBM8-Manual.pdf
M      sanlmMex_noopenmp.mexglx
M      sanlmMex.mexglx
M      sanlmMex.mexmaci64
M      AmapMex.mexw64
M      sanlmMex_noopenmp.mexmaci64
M      sanlmMex_noopenmp.mexa64
M      sanlmMex.mexa64
M      VBM8-Manual.doc
M      AmapMex.mexglx

(1) Corrected definition of groups/time points in VBM8 manual 
    (statistical analysis of longitudinal data). Thanks to Pieter van de 
    Vijver for finding this error.
(2) Recompiled all c-files.
------------------------------------------------------------------------
r391 | gaser | 2011-01-27 22:59:47